style(link): fix style hover link when too long

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,9 @@
 /* Links */
 
 .link-animation {
-  @apply no-underline relative w-fit inline-block after:block after:content-[''] after:absolute after:w-full after:h-[3px] after:hover:bg-accent after:focus:bg-accent after:rounded-sm after:scale-x-0 after:hover:scale-x-100 after:focus:scale-x-100 after:transition after:duration-300 after:origin-center;
+  @apply no-underline relative ease-out duration-300 bg-link bg-no-repeat bg-fromTo bg-gradient-to-l from-info to-info focus:bg-link-hover hover:bg-link-hover rounded-sm;
 }
 
 .active.link {
-  @apply no-underline relative w-fit inline-block after:block after:content-[''] after:absolute after:w-full after:h-[3px] after:bg-accent after:focus:bg-accent after:rounded-sm  after:scale-x-100 after:focus:scale-x-100 after:transition;
+  @apply no-underline relative bg-no-repeat bg-fromTo bg-gradient-to-l from-info to-info bg-link-hover rounded-sm;
 }
